# BookBorrow

./: .env.example  Cargo.toml  Dockerfile  LICENCE  README.md  docker-compose.yml
assets/: Insomnia_2023-07-13.json
docker/backend/: Dockerfile
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: auth.rs  main.rs
src/middleware/: auth.rs
src/models/: books.rs  mod.rs  reservations.rs  users.rs
src/routes/: authentication.rs  books.rs  config.rs  index.rs  mod.rs  register.rs  reservations.rs  users.rs
src/utils/: default.rs  mod.rs  token.rs
