[package]
name = "BookBorrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
uuid = { version= "1.4.0", features = ["v4", "fast-rng"] }
log = "0.4.19"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
base64 = "0.21.2"
md-5 = "0.10.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
chrono =  { version = "0.4.26", features = ["serde"] }
actix-web = "4"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-actix-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
migration = { path = "migration" }